# ia_app

./: README.md  app.py  mlflow.db  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml  parameters_test.yml  parameters_training.yml
notebooks/: EDA.ipynb
src/sp500_trading/: __init__.py  __main__.py  settings.py
src/sp500_trading/pipelines/data_processing/: nodes.py  pipeline.py
src/sp500_trading/pipelines/test/: __init__.py  nodes.py  pipeline.py
src/sp500_trading/pipelines/training/: nodes.py  pipeline.py
tests/pipelines/test/: test_pipeline.py
